--- a/spec/vcr/Create_Party/Happy_path/creates_a_new_viewing_party_and_upon_submit_renders_the_party.yml
+++ b/spec/vcr/Create_Party/Happy_path/creates_a_new_viewing_party_and_upon_submit_renders_the_party.yml
@@ -25,7 +25,7 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Fri, 03 Dec 2021 18:16:58 GMT
+      - Thu, 16 Dec 2021 21:37:30 GMT
       Server:
       - openresty
       Access-Control-Allow-Origin:
@@ -42,23 +42,23 @@ http_interactions:
       X-Memc-Key:
       - 61ab33e7da6ffffeef140e858380738d178d3504
       X-Memc-Age:
-      - '14481'
+      - '2820'
       X-Memc-Expires:
-      - '629'
+      - '14352'
       Etag:
-      - W/"5eda7757f75458927583bfd45e1edaef"
+      - W/"7f6275b5a51231d760570137bb9ff591"
       Vary:
       - Accept-Encoding
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 97971aa6c140e2dfc8adaee6c929eedc.cloudfront.net (CloudFront)
+      - 1.1 9cefde3a3c84cc779d3c26a39c2e4430.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - IAD89-C3
+      - DEN50-C2
       X-Amz-Cf-Id:
-      - _XOY6mhBE9fsZv3v1ib5ot04Nfbb61uMwHLF5cPytzZafYWjKX5UVg==
+      - ebxSi3m0rQ-HOGrcr4dhRvzdQO9JXwwbJSDeQm0mQ466dYOqCBYExg==
       Age:
-      - '4743'
+      - '11760'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/iNh3BivHyg5sQRPP1KOkzguEX0H.jpg","belongs_to_collection":null,"budget":25000000,"genres":[{"id":18,"name":"Drama"},{"id":80,"name":"Crime"}],"homepage":"","id":278,"imdb_id":"tt0111161","original_language":"en","original_title":"The
@@ -67,11 +67,11 @@ http_interactions:
         at the Shawshank prison, where he puts his accounting skills to work for an
         amoral warden. During his long stretch in prison, Dufresne comes to be admired
         by the other inmates -- including an older prisoner named Red -- for his integrity
-        and unquenchable sense of hope.","popularity":52.409,"poster_path":"/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg","production_companies":[{"id":97,"logo_path":"/7znWcbDd4PcJzJUlJxYqAlPPykp.png","name":"Castle
+        and unquenchable sense of hope.","popularity":73.958,"poster_path":"/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg","production_companies":[{"id":97,"logo_path":"/7znWcbDd4PcJzJUlJxYqAlPPykp.png","name":"Castle
         Rock Entertainment","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1994-09-23","revenue":28341469,"runtime":142,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"Fear
-        can hold you prisoner. Hope can set you free.","title":"The Shawshank Redemption","video":false,"vote_average":8.7,"vote_count":20213}'
-  recorded_at: Fri, 03 Dec 2021 19:36:01 GMT
+        can hold you prisoner. Hope can set you free.","title":"The Shawshank Redemption","video":false,"vote_average":8.7,"vote_count":20287}'
+  recorded_at: Fri, 17 Dec 2021 00:53:30 GMT
 - request:
     method: get
     uri: https://api.themoviedb.org/3/movie/278?api_key=<movie_api_key>
@@ -97,7 +97,7 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Fri, 03 Dec 2021 18:16:58 GMT
+      - Thu, 16 Dec 2021 21:37:30 GMT
       Server:
       - openresty
       Access-Control-Allow-Origin:
@@ -114,23 +114,23 @@ http_interactions:
       X-Memc-Key:
       - 61ab33e7da6ffffeef140e858380738d178d3504
       X-Memc-Age:
-      - '14481'
+      - '2820'
       X-Memc-Expires:
-      - '629'
+      - '14352'
       Etag:
-      - W/"5eda7757f75458927583bfd45e1edaef"
+      - W/"7f6275b5a51231d760570137bb9ff591"
       Vary:
       - Accept-Encoding
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 c974a69619205281e0e6b8e73f95e4b5.cloudfront.net (CloudFront)
+      - 1.1 cddde15c11afac53ac9fe7978dcfecd7.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - IAD89-C3
+      - DEN50-C2
       X-Amz-Cf-Id:
-      - _628pkvpDKdGAPbQU4mnoogcMbpPUoWip91lijp_o-BCR1uIE6Bq9Q==
+      - KA_bGGQLMoZwJuJUFYvXNJwuDe6qMC15yOhtYZc26QTjY-xjmcHgfw==
       Age:
-      - '4744'
+      - '11760'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/iNh3BivHyg5sQRPP1KOkzguEX0H.jpg","belongs_to_collection":null,"budget":25000000,"genres":[{"id":18,"name":"Drama"},{"id":80,"name":"Crime"}],"homepage":"","id":278,"imdb_id":"tt0111161","original_language":"en","original_title":"The
@@ -139,11 +139,11 @@ http_interactions:
         at the Shawshank prison, where he puts his accounting skills to work for an
         amoral warden. During his long stretch in prison, Dufresne comes to be admired
         by the other inmates -- including an older prisoner named Red -- for his integrity
-        and unquenchable sense of hope.","popularity":52.409,"poster_path":"/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg","production_companies":[{"id":97,"logo_path":"/7znWcbDd4PcJzJUlJxYqAlPPykp.png","name":"Castle
+        and unquenchable sense of hope.","popularity":73.958,"poster_path":"/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg","production_companies":[{"id":97,"logo_path":"/7znWcbDd4PcJzJUlJxYqAlPPykp.png","name":"Castle
         Rock Entertainment","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1994-09-23","revenue":28341469,"runtime":142,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"Fear
-        can hold you prisoner. Hope can set you free.","title":"The Shawshank Redemption","video":false,"vote_average":8.7,"vote_count":20213}'
-  recorded_at: Fri, 03 Dec 2021 19:36:02 GMT
+        can hold you prisoner. Hope can set you free.","title":"The Shawshank Redemption","video":false,"vote_average":8.7,"vote_count":20287}'
+  recorded_at: Fri, 17 Dec 2021 00:53:30 GMT
 - request:
     method: get
     uri: https://api.themoviedb.org/3/movie/278?api_key=<movie_api_key>
@@ -169,7 +169,7 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Fri, 03 Dec 2021 18:16:58 GMT
+      - Thu, 16 Dec 2021 21:37:30 GMT
       Server:
       - openresty
       Access-Control-Allow-Origin:
@@ -186,23 +186,23 @@ http_interactions:
       X-Memc-Key:
       - 61ab33e7da6ffffeef140e858380738d178d3504
       X-Memc-Age:
-      - '14481'
+      - '2820'
       X-Memc-Expires:
-      - '629'
+      - '14352'
       Etag:
-      - W/"5eda7757f75458927583bfd45e1edaef"
+      - W/"7f6275b5a51231d760570137bb9ff591"
       Vary:
       - Accept-Encoding
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 38ecebcaa39c8742da2b6336935bb446.cloudfront.net (CloudFront)
+      - 1.1 ce4b35590464ed34415a13badd946ebb.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - IAD89-C3
+      - DEN50-C2
       X-Amz-Cf-Id:
-      - eUfxxR_Lis_jKS-IfJl6kBx7iw55-Eqq3XrzpQIcnwxItIfqzfdEBg==
+      - LKh6JmjhcRyPma0XvkLnbi3WlCeiKJcoPaenP32C_t7eoUVKMw2xkg==
       Age:
-      - '4744'
+      - '11760'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/iNh3BivHyg5sQRPP1KOkzguEX0H.jpg","belongs_to_collection":null,"budget":25000000,"genres":[{"id":18,"name":"Drama"},{"id":80,"name":"Crime"}],"homepage":"","id":278,"imdb_id":"tt0111161","original_language":"en","original_title":"The
@@ -211,11 +211,11 @@ http_interactions:
         at the Shawshank prison, where he puts his accounting skills to work for an
         amoral warden. During his long stretch in prison, Dufresne comes to be admired
         by the other inmates -- including an older prisoner named Red -- for his integrity
-        and unquenchable sense of hope.","popularity":52.409,"poster_path":"/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg","production_companies":[{"id":97,"logo_path":"/7znWcbDd4PcJzJUlJxYqAlPPykp.png","name":"Castle
+        and unquenchable sense of hope.","popularity":73.958,"poster_path":"/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg","production_companies":[{"id":97,"logo_path":"/7znWcbDd4PcJzJUlJxYqAlPPykp.png","name":"Castle
         Rock Entertainment","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1994-09-23","revenue":28341469,"runtime":142,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"Fear
-        can hold you prisoner. Hope can set you free.","title":"The Shawshank Redemption","video":false,"vote_average":8.7,"vote_count":20213}'
-  recorded_at: Fri, 03 Dec 2021 19:36:02 GMT
+        can hold you prisoner. Hope can set you free.","title":"The Shawshank Redemption","video":false,"vote_average":8.7,"vote_count":20287}'
+  recorded_at: Fri, 17 Dec 2021 00:53:30 GMT
 - request:
     method: get
     uri: https://api.themoviedb.org/3/movie/278?api_key=<movie_api_key>
@@ -241,7 +241,7 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Fri, 03 Dec 2021 18:16:58 GMT
+      - Thu, 16 Dec 2021 21:37:30 GMT
       Server:
       - openresty
       Access-Control-Allow-Origin:
@@ -258,23 +258,23 @@ http_interactions:
       X-Memc-Key:
       - 61ab33e7da6ffffeef140e858380738d178d3504
       X-Memc-Age:
-      - '14481'
+      - '2820'
       X-Memc-Expires:
-      - '629'
+      - '14352'
       Etag:
-      - W/"5eda7757f75458927583bfd45e1edaef"
+      - W/"7f6275b5a51231d760570137bb9ff591"
       Vary:
       - Accept-Encoding
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 ddeb8679359f033dad405557c487bfdd.cloudfront.net (CloudFront)
+      - 1.1 9204cf44179493ed42c678800a26918b.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - IAD89-C3
+      - DEN50-C2
       X-Amz-Cf-Id:
-      - J__OX213_cBtEfr5Lpiiw7l5ZllN_EVtvBHPbER4wy6Xeuzwtk4sfQ==
+      - A-wp-MjeDsJCZ7m4ViaBd3LDz8MfooKNRNaoU5XYVCfqpppa-2HTig==
       Age:
-      - '4744'
+      - '11760'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/iNh3BivHyg5sQRPP1KOkzguEX0H.jpg","belongs_to_collection":null,"budget":25000000,"genres":[{"id":18,"name":"Drama"},{"id":80,"name":"Crime"}],"homepage":"","id":278,"imdb_id":"tt0111161","original_language":"en","original_title":"The
@@ -283,9 +283,9 @@ http_interactions:
         at the Shawshank prison, where he puts his accounting skills to work for an
         amoral warden. During his long stretch in prison, Dufresne comes to be admired
         by the other inmates -- including an older prisoner named Red -- for his integrity
-        and unquenchable sense of hope.","popularity":52.409,"poster_path":"/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg","production_companies":[{"id":97,"logo_path":"/7znWcbDd4PcJzJUlJxYqAlPPykp.png","name":"Castle
+        and unquenchable sense of hope.","popularity":73.958,"poster_path":"/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg","production_companies":[{"id":97,"logo_path":"/7znWcbDd4PcJzJUlJxYqAlPPykp.png","name":"Castle
         Rock Entertainment","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1994-09-23","revenue":28341469,"runtime":142,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"Fear
-        can hold you prisoner. Hope can set you free.","title":"The Shawshank Redemption","video":false,"vote_average":8.7,"vote_count":20213}'
-  recorded_at: Fri, 03 Dec 2021 19:36:02 GMT
+        can hold you prisoner. Hope can set you free.","title":"The Shawshank Redemption","video":false,"vote_average":8.7,"vote_count":20287}'
+  recorded_at: Fri, 17 Dec 2021 00:53:30 GMT
 recorded_with: VCR 6.0.0
