--- a/spec/vcr/Create_Party/Happy_path/has_a_sad_path.yml
+++ b/spec/vcr/Create_Party/Happy_path/has_a_sad_path.yml
@@ -25,7 +25,7 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Fri, 03 Dec 2021 18:16:58 GMT
+      - Thu, 16 Dec 2021 21:37:30 GMT
       Server:
       - openresty
       Access-Control-Allow-Origin:
@@ -42,23 +42,23 @@ http_interactions:
       X-Memc-Key:
       - 61ab33e7da6ffffeef140e858380738d178d3504
       X-Memc-Age:
-      - '14481'
+      - '2820'
       X-Memc-Expires:
-      - '629'
+      - '14352'
       Etag:
-      - W/"5eda7757f75458927583bfd45e1edaef"
+      - W/"7f6275b5a51231d760570137bb9ff591"
       Vary:
       - Accept-Encoding
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 10a9e9969f05a75cc05e6f70b8499f7e.cloudfront.net (CloudFront)
+      - 1.1 788f6ff13e09a712f5227945fa34a519.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - IAD89-C3
+      - DEN50-C2
       X-Amz-Cf-Id:
-      - 5pLEgjrlmXkaU5P6CbuPA204AQ5hjzGZk4LAISW0uj1N86j2uU-rmw==
+      - Z8_QAxQq32nvmKz785KjuS0WnYbNB88JD36HLVZ9Wc5Rp1RBRyTjCw==
       Age:
-      - '4744'
+      - '11760'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/iNh3BivHyg5sQRPP1KOkzguEX0H.jpg","belongs_to_collection":null,"budget":25000000,"genres":[{"id":18,"name":"Drama"},{"id":80,"name":"Crime"}],"homepage":"","id":278,"imdb_id":"tt0111161","original_language":"en","original_title":"The
@@ -67,11 +67,11 @@ http_interactions:
         at the Shawshank prison, where he puts his accounting skills to work for an
         amoral warden. During his long stretch in prison, Dufresne comes to be admired
         by the other inmates -- including an older prisoner named Red -- for his integrity
-        and unquenchable sense of hope.","popularity":52.409,"poster_path":"/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg","production_companies":[{"id":97,"logo_path":"/7znWcbDd4PcJzJUlJxYqAlPPykp.png","name":"Castle
+        and unquenchable sense of hope.","popularity":73.958,"poster_path":"/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg","production_companies":[{"id":97,"logo_path":"/7znWcbDd4PcJzJUlJxYqAlPPykp.png","name":"Castle
         Rock Entertainment","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1994-09-23","revenue":28341469,"runtime":142,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"Fear
-        can hold you prisoner. Hope can set you free.","title":"The Shawshank Redemption","video":false,"vote_average":8.7,"vote_count":20213}'
-  recorded_at: Fri, 03 Dec 2021 19:36:02 GMT
+        can hold you prisoner. Hope can set you free.","title":"The Shawshank Redemption","video":false,"vote_average":8.7,"vote_count":20287}'
+  recorded_at: Fri, 17 Dec 2021 00:53:30 GMT
 - request:
     method: get
     uri: https://api.themoviedb.org/3/movie/278?api_key=<movie_api_key>
@@ -97,7 +97,7 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Fri, 03 Dec 2021 18:16:58 GMT
+      - Thu, 16 Dec 2021 21:37:30 GMT
       Server:
       - openresty
       Access-Control-Allow-Origin:
@@ -114,23 +114,23 @@ http_interactions:
       X-Memc-Key:
       - 61ab33e7da6ffffeef140e858380738d178d3504
       X-Memc-Age:
-      - '14481'
+      - '2820'
       X-Memc-Expires:
-      - '629'
+      - '14352'
       Etag:
-      - W/"5eda7757f75458927583bfd45e1edaef"
+      - W/"7f6275b5a51231d760570137bb9ff591"
       Vary:
       - Accept-Encoding
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 a4cae74c829bc214e4183c38164a2c0a.cloudfront.net (CloudFront)
+      - 1.1 ce4b35590464ed34415a13badd946ebb.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - IAD89-C3
+      - DEN50-C2
       X-Amz-Cf-Id:
-      - XZksu5Df2zgSqX6ezy_Y6BIY5gYDo2PIUca1WpdMZUxMe3RTfy5qSA==
+      - yyM3MXBFKMAQ8MODHYWq-wsha122DX6WE7GWb8U_Dv-1baB4_4vF0w==
       Age:
-      - '4744'
+      - '11760'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/iNh3BivHyg5sQRPP1KOkzguEX0H.jpg","belongs_to_collection":null,"budget":25000000,"genres":[{"id":18,"name":"Drama"},{"id":80,"name":"Crime"}],"homepage":"","id":278,"imdb_id":"tt0111161","original_language":"en","original_title":"The
@@ -139,11 +139,11 @@ http_interactions:
         at the Shawshank prison, where he puts his accounting skills to work for an
         amoral warden. During his long stretch in prison, Dufresne comes to be admired
         by the other inmates -- including an older prisoner named Red -- for his integrity
-        and unquenchable sense of hope.","popularity":52.409,"poster_path":"/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg","production_companies":[{"id":97,"logo_path":"/7znWcbDd4PcJzJUlJxYqAlPPykp.png","name":"Castle
+        and unquenchable sense of hope.","popularity":73.958,"poster_path":"/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg","production_companies":[{"id":97,"logo_path":"/7znWcbDd4PcJzJUlJxYqAlPPykp.png","name":"Castle
         Rock Entertainment","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1994-09-23","revenue":28341469,"runtime":142,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"Fear
-        can hold you prisoner. Hope can set you free.","title":"The Shawshank Redemption","video":false,"vote_average":8.7,"vote_count":20213}'
-  recorded_at: Fri, 03 Dec 2021 19:36:02 GMT
+        can hold you prisoner. Hope can set you free.","title":"The Shawshank Redemption","video":false,"vote_average":8.7,"vote_count":20287}'
+  recorded_at: Fri, 17 Dec 2021 00:53:30 GMT
 - request:
     method: get
     uri: https://api.themoviedb.org/3/movie/278?api_key=<movie_api_key>
@@ -169,7 +169,7 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Fri, 03 Dec 2021 18:16:58 GMT
+      - Thu, 16 Dec 2021 21:37:30 GMT
       Server:
       - openresty
       Access-Control-Allow-Origin:
@@ -186,23 +186,23 @@ http_interactions:
       X-Memc-Key:
       - 61ab33e7da6ffffeef140e858380738d178d3504
       X-Memc-Age:
-      - '14481'
+      - '2820'
       X-Memc-Expires:
-      - '629'
+      - '14352'
       Etag:
-      - W/"5eda7757f75458927583bfd45e1edaef"
+      - W/"7f6275b5a51231d760570137bb9ff591"
       Vary:
       - Accept-Encoding
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 7eefe38d76087dfad8e2f0b7702246ef.cloudfront.net (CloudFront)
+      - 1.1 ed8294655bb258e13bfb027c25483ddb.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - IAD89-C3
+      - DEN50-C2
       X-Amz-Cf-Id:
-      - Lbvu5ZRfz7mqFO2kwp3xF0pCLAEw9lH_cQAp9KtBEg3mQEKO_469AA==
+      - p-FgtJBeW61bbb7q5vN2IfKTUd6Cmjr8dwYeUoGVYpn9yW6qnY4szQ==
       Age:
-      - '4745'
+      - '11760'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/iNh3BivHyg5sQRPP1KOkzguEX0H.jpg","belongs_to_collection":null,"budget":25000000,"genres":[{"id":18,"name":"Drama"},{"id":80,"name":"Crime"}],"homepage":"","id":278,"imdb_id":"tt0111161","original_language":"en","original_title":"The
@@ -211,11 +211,11 @@ http_interactions:
         at the Shawshank prison, where he puts his accounting skills to work for an
         amoral warden. During his long stretch in prison, Dufresne comes to be admired
         by the other inmates -- including an older prisoner named Red -- for his integrity
-        and unquenchable sense of hope.","popularity":52.409,"poster_path":"/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg","production_companies":[{"id":97,"logo_path":"/7znWcbDd4PcJzJUlJxYqAlPPykp.png","name":"Castle
+        and unquenchable sense of hope.","popularity":73.958,"poster_path":"/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg","production_companies":[{"id":97,"logo_path":"/7znWcbDd4PcJzJUlJxYqAlPPykp.png","name":"Castle
         Rock Entertainment","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1994-09-23","revenue":28341469,"runtime":142,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"Fear
-        can hold you prisoner. Hope can set you free.","title":"The Shawshank Redemption","video":false,"vote_average":8.7,"vote_count":20213}'
-  recorded_at: Fri, 03 Dec 2021 19:36:03 GMT
+        can hold you prisoner. Hope can set you free.","title":"The Shawshank Redemption","video":false,"vote_average":8.7,"vote_count":20287}'
+  recorded_at: Fri, 17 Dec 2021 00:53:30 GMT
 - request:
     method: get
     uri: https://api.themoviedb.org/3/movie/278?api_key=<movie_api_key>
@@ -241,7 +241,7 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Fri, 03 Dec 2021 18:16:58 GMT
+      - Thu, 16 Dec 2021 21:37:30 GMT
       Server:
       - openresty
       Access-Control-Allow-Origin:
@@ -258,23 +258,23 @@ http_interactions:
       X-Memc-Key:
       - 61ab33e7da6ffffeef140e858380738d178d3504
       X-Memc-Age:
-      - '14481'
+      - '2820'
       X-Memc-Expires:
-      - '629'
+      - '14352'
       Etag:
-      - W/"5eda7757f75458927583bfd45e1edaef"
+      - W/"7f6275b5a51231d760570137bb9ff591"
       Vary:
       - Accept-Encoding
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 8d6071bd169bbf5fd46638140132b1d1.cloudfront.net (CloudFront)
+      - 1.1 e1b5abb53c407f0a057625c46693461d.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - IAD89-C3
+      - DEN50-C2
       X-Amz-Cf-Id:
-      - wJLtGRZba56UKsGlpaFMNBdsQeMVT8fhcQKAa5B8csxA_WWVocXdig==
+      - "-OQgZ4v-QJBDEVqLSYu5kZ7lOMK4Dx8SqVqQCLME1grtwFoTau3SOA=="
       Age:
-      - '4745'
+      - '11760'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/iNh3BivHyg5sQRPP1KOkzguEX0H.jpg","belongs_to_collection":null,"budget":25000000,"genres":[{"id":18,"name":"Drama"},{"id":80,"name":"Crime"}],"homepage":"","id":278,"imdb_id":"tt0111161","original_language":"en","original_title":"The
@@ -283,9 +283,9 @@ http_interactions:
         at the Shawshank prison, where he puts his accounting skills to work for an
         amoral warden. During his long stretch in prison, Dufresne comes to be admired
         by the other inmates -- including an older prisoner named Red -- for his integrity
-        and unquenchable sense of hope.","popularity":52.409,"poster_path":"/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg","production_companies":[{"id":97,"logo_path":"/7znWcbDd4PcJzJUlJxYqAlPPykp.png","name":"Castle
+        and unquenchable sense of hope.","popularity":73.958,"poster_path":"/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg","production_companies":[{"id":97,"logo_path":"/7znWcbDd4PcJzJUlJxYqAlPPykp.png","name":"Castle
         Rock Entertainment","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1994-09-23","revenue":28341469,"runtime":142,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"Fear
-        can hold you prisoner. Hope can set you free.","title":"The Shawshank Redemption","video":false,"vote_average":8.7,"vote_count":20213}'
-  recorded_at: Fri, 03 Dec 2021 19:36:03 GMT
+        can hold you prisoner. Hope can set you free.","title":"The Shawshank Redemption","video":false,"vote_average":8.7,"vote_count":20287}'
+  recorded_at: Fri, 17 Dec 2021 00:53:30 GMT
 recorded_with: VCR 6.0.0
